cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug217827.cpp

void bug217827_foo() {
    int blah[1];

    for (const auto s : blah)
        s++;
    
}
